Added about and hyperlinks

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
+
 <html>
 
     <body>
 
         <h1>
             Hello
+            <a href="about.html">about</a>
         </h1>
     </body>
 </html>
