--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 
 <html>
-
     <body>
-
         <h1>
             Hello
             <a href="about.html">about</a>
+            <h1>Feature 1</h1>
         </h1>
     </body>
 </html>
